--- a/README
+++ b/README
@@ -4,6 +4,6 @@ Windows Installation
 
 Download all the files.
 
-Extract "blocks.zip.001" and "chainstate.zip.001" under "C:\Users\Username\AppData\Roaming\Dogecoin".
+Extract "blocks.zip.001" and "chainstate.zip.001" to "C:\Users\Username\AppData\Roaming\Dogecoin".
 
 Done.
